[workspace]
members = [
    "crates/corelib",
    "crates/streaming",
    "crates/replication",
    "crates/cli",
]

resolver = "2"

[workspace.package]
name = "consistent-hash-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Hashing
siphasher = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"

# Algorithms
petgraph = "0.6"  # For flow algorithms
priority-queue = "2.0"

# Networking
quinn = "0.10"  # QUIC protocol
bytes = "1.5"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"

# Testing
proptest = "1.4"
criterion = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
